fixing inside tag buttons alignment

--- a/src/Pages/InsideTagPage/InsideTagPage.module.css
+++ b/src/Pages/InsideTagPage/InsideTagPage.module.css
@@ -39,7 +39,7 @@
   display: flex;
   height: 100%;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: flex-end;
 }
 
 .FollowUnfollowTagButton{
